wrapped map-section insider container to fix bg
bg colour was limited by max-width set on map-section, created a new div which used for setting background colour

--- a/client/src/components/MapSection.css
+++ b/client/src/components/MapSection.css
@@ -38,6 +38,10 @@
 	color: antiquewhite;
 }
 
+.night-container {
+	background-color: #0c1330;
+}
+
 .bootstrap-container {
 	padding-left: 82px;
 	padding-top: 20px;
